# etc-rs

./: .gitignore  Cargo.toml  README.md  grammar.ebnf  postcard.sh  todo
examples/: hello.amp  manifest.amp
src/: assets.rs  builder.rs  error.rs  lib.rs  main.rs  pipeline.rs  scope.rs  system.rs  universe.rs  utils.rs
src/arch/linux-amd64/: rt0.asm
src/ast/: mod.rs
src/dispatch/: mod.rs
src/lexer/: mod.rs  reader.rs
src/lir/: builder.rs  compile.rs  context.rs  mod.rs  repr.rs  target.rs
src/lir/backend/: mod.rs
src/lir/backend/amd64/: mod.rs
src/lir/backend/amd64/codegen/: call_conv.rs  linscan.rs  mod.rs
src/lir/codegen/: call_conv.rs  linscan.rs  mod.rs
src/parser/: grammar.rs  mod.rs
src/pass/: codegen_pass.rs  collapse_pass.rs  compile_pass.rs  const_pass.rs  definition_pass.rs  exec_pass.rs  infer_pass.rs  mir_pass.rs  mod.rs  reify_pass.rs  scope_pass.rs  universe_pass.rs  validate_pass.rs
src/types/: assoc.rs  mod.rs
src/values/: mod.rs
